add POST /spaces/{space}/initialize